--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .ipynb_checkpoints/SpacyBasics-checkpoint.ipynb
 .ipynb_checkpoints/01-Tokenization-checkpoint.ipynb
+.ipynb_checkpoints/Tokenization-checkpoint.ipynb
