--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .ipynb_checkpoints/SpacyBasics-checkpoint.ipynb
 .ipynb_checkpoints/01-Tokenization-checkpoint.ipynb
 .ipynb_checkpoints/Tokenization-checkpoint.ipynb
+.DS_Store
