--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .ipynb_checkpoints/01-Tokenization-checkpoint.ipynb
 .ipynb_checkpoints/Tokenization-checkpoint.ipynb
 .DS_Store
+.ipynb_checkpoints/StopWords-checkpoint.ipynb
