--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .ipynb_checkpoints/Tokenization-checkpoint.ipynb
 .DS_Store
 .ipynb_checkpoints/StopWords-checkpoint.ipynb
+1. NLP basics/.ipynb_checkpoints/4. Vocabulary-and-Matching-checkpoint.ipynb
